<resources>
    <string name="app_name">Cafeteria beta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Home">Home</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="feedback">Send Feedback</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name :</string>
    <string name="user">user</string>
    <string name="aboutContent">Feeling hungry? By tapping into our cafeteria network, you be able to search and locate for nearby cafeteria located near you. Other than that, it saves your waiting time by allowing you to view information of the stalls menu, opening time, price and availability of the food. We provide service like allowing you to feedback to the stall owner using social media.</string>
    <string-array name="link">
        <item>https://www.timeout.com/singapore/restaurants/firebake</item>
        <item>https://www.timeout.com/singapore/restaurants/birders</item>
        <item>https://www.timeout.com/singapore/restaurants-and-cafes/lewin-terrace</item>
        <item>https://www.timeout.com/singapore/restaurants-and-cafes/the-black-swan</item>
        <item>https://www.timeout.com/singapore/restaurants/sprmrkt-stpi</item>
        <item>https://www.timeout.com/singapore/restaurants/steamroom-with-the-pillar-and-stones</item>
        <item>https://www.timeout.com/singapore/restaurants/kotobuki</item>
        <item>http://https://www.timeout.com/singapore/restaurants/schmear</item>
    </string-array>
    <string name="search_title">Search Outlets</string>
    <string name="search_hint">keywords</string>
    <string name="new_review">New Review</string>
    <string name="logintext">Login</string>
    <string name="registering">No account? Click here to register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="role">role</string>
</resources>
