<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/sidemenubg"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingRight="5dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="wrap_content"
            android:layout_height="83dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/visitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/selectedbg"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/selectedbg"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:visibility="gone"
        >


        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/logout" />
    </LinearLayout>


</LinearLayout>
